# routes_api

./: .gitignore  README.md  pyproject.toml
src/business/application/common/: dto.py  exceptions.py  interfaces.py  use_cases.py
src/business/application/route/: dto.py  exceptions.py  interfaces.py  use_cases.py
src/business/application/station/: dto.py  exceptions.py  interfaces.py  use_cases.py
src/business/application/ticket/: dto.py  exceptions.py  interfaces.py  use_cases.py
src/business/application/transport/: exceptions.py  interfaces.py  use_cases.py
src/business/application/user/: dto.py  exceptions.py  interfaces.py  use_cases.py
src/business/domain/entities/: __init__.py  route.py  station.py  ticket.py  transport.py  user.py
src/business/domain/services/: __init__.py  ticket.py  user.py
tests/application/: test_route.py  test_station.py  test_ticket.py  test_transport.py  test_user.py
tests/domain/: test_ticket.py  test_user.py
tests/fixtures/: __init__.py  db.py  route_use_cases.py  station_use_cases.py  ticket_use_cases.py  transport_use_cases.py  user_use_cases.py
tests/mocks/: db.py
tests/mocks/repositories/: __init__.py  base.py  route.py  station.py  ticket.py  transport.py  user.py
